# ChesapeakeCommunityConnect

./: .env  .gitignore  .gitignore.orig  CCCSetupInstructions.md  DeveloperNotes.md  GitHubCheetsheet.md  Google Sign in functionality.md  GoogleCloudAndVSCodeInstructions.md  Issue branch Instructions.txt  README.md  RUN_DEV_SERVER.md  about.html  contact.html  index.html  map-script.js  map.html  package-lock.json  requirements.txt  research.md  script.js  signin-script.js  signin.html  styles.css  tsconfig.json
cccSite/: app.yaml  db.sqlite3  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  update_maptags.py  views.py
cccSite/Filterer/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
cccSite/Filterer/migrations/: 0001_initial.py  0002_remove_entries_entry_id_remove_tagfilters_filter_id_and_more.py  0003_entries_entry_desc_tagfilters_filter_desc.py  0004_entryfilterassoc_associationname.py  0005_delete_entries_alter_entryfilterassoc_entry_mtm.py  0006_rename_entryfilterassoc_postfilterassoc_and_more.py  (+1 more)
cccSite/Janitor/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cccSite/account/: admin.py  admin_BACKUP_17266.py  admin_REMOTE_17266.py  forms.py  models.py  storage.py  tests.py  urls.py  views.py
cccSite/boiler/: admin 2.py  models.py  tests.py  urls.py  views.py
cccSite/boiler/templates/: help.html
cccSite/cccSite/: asgi.py  settings 2.py  settings.py  urls 2.py  urls.py  wsgi.py
cccSite/mapViewer/: admin.py  apps.py  forms.py  models 2.py  models.py  urls.py  views 2.py  views.py
cccSite/tests/: conftest.py
(+402 files in other folders)
